--- a/all-about-matcha.html
+++ b/all-about-matcha.html
@@ -8,7 +8,7 @@
 
 
     <title>All About Matcha case study</title>
-    <link rel="shortcut icon" type="img/jpg" href="img/favicon.svg"/>
+    <link rel="shortcut icon" type="img/jpg" href="img/favicon.svg" />
 </head>
 
 <body>
@@ -66,8 +66,8 @@
             classes on-site.
             Due to the Pandemic, they see a need for online business, so they want to expand their business to the
             online market.
-            With the growing reputation of matcha overseas, they wish to have their tea ceremony classes online as well
-            as their products so that people can learn more about matcha.
+            With the growing reputation of matcha overseas, they would like to put both their products and tea ceremony
+            classes online.
         </div>
 
         <div class="mirror-body">
@@ -91,9 +91,9 @@
             </div>
 
             <p>Challenges</p>
-            <li>The majority of people have no idea what to bring to a Japanese Tea Ceremony, or what it's all about.
+            <li>Most people have no idea what to bring to a Japanese Tea Ceremony, or what it's all about.
             </li>
-            <li>Japanese Tea Ceremony sounds too intimidating and has strict manners.</li>
+            <li>Japanese Tea Ceremony can be intimidating and appear to have strict manners.</li>
 
 
         </div>
@@ -158,10 +158,9 @@
         <p>1:1 User Interviews</p>
         I conducted user interviews with 6 individuals who like matcha. I learned that the majority of people would
         seek out Japanese Tea Ceremony as a cultural experience when they were in Japan or if they had the chance.
-        However, a few participants (those who have lived in Japan before) said they would like to learn about and
-        get better at it.
+        However, a few participants (those who have lived in Japan before) said they would like to learn more about it.
         I decided to target those who would seek it out when given the chance, since they represent the majority
-        of potential users in the US.<br><br>
+        of potential users in the United States.<br><br>
 
         Here are the major needs/pain points I got from the user interviews:
 
@@ -201,9 +200,8 @@
         To empathize with the users and remember their needs, I created a persona that
         represents a core user. At first, I was thinking that my target users are people who appreciate
         attending Japanese Tea Ceremony and drinking matcha as it is. However, I learned through my research
-        that liking matcha doesn’t mean they would attend a class to get better at making matcha, but to learn
-        about a
-        new culture and new things.
+        that liking matcha doesn’t mean they would attend a class to get better at making matcha, but rather to learn
+        about a new culture.
 
         <div>
             <a href=#img-persona class="lightbox-link">
@@ -220,9 +218,8 @@
 
         After defining my persona, I created a user flow to visualize the paths that users would take to book a
         tea ceremony class.
-        I was able to empathize with the users and define what to include and emphasize on the
-        website.
-        With this understanding, I can design the website with specific user tasks in mind.
+        This reference helped me decide what to include and emphasize on the
+        website as well as design the website with specific user tasks in mind.
 
 
         <div>
@@ -252,7 +249,7 @@
         information about matcha and Japanese Tea ceremony. From my research, I learned that
         people tend to associate matcha with only desserts or drinks, so I included other information that users
         can read to learn about other aspects of matcha.
-        I also focused on having two things on the website: matcha e-commerce and booking online Japanese Tea Ceremony
+        I also focused on having two things on the website: matcha e-commerce and online Japanese Tea Ceremony
         classes, since this is what the business does.
 
 
@@ -268,8 +265,8 @@
         </div>
 
         <p>Mid-Fidelity Wireframes</p>
-        I started to work on wireframes based on the sketches, but I realized the website is overloaded with too much
-        information about matcha. I wanted to put everything on one page, but the website became confusing.
+        I started to work on wireframes based on the sketches, but I realized the website was overloaded with too much
+        information about matcha. I wanted to put everything on one page, but the website had become confusing.
         I removed the unnecessary elements from the main page, to make sure that users don't get lost.
 
         <div>
@@ -283,9 +280,9 @@
         </div>
 
 
-        I still had a lot of different pieces of information at first that made the main page look cluttered.
+        After my first cleanup, there were still many pieces of information which made the main page look cluttered.
         I realized that the main page was losing its focus of what it was telling the users.
-        I iterated on this several times and was able to streamline it.
+        I iterated on this several times and was able to streamline the design.
 
         <div>
             <a href=#img-wireframe-main class="lightbox-link">
@@ -298,10 +295,9 @@
             </a>
         </div>
 
-        I first had two containers for private and group pages.
-        However, I realized those two are almost the same except for the price and a few other things, so I combined
-        them
-        into one section.
+        Additionally, at first there were had two containers for private and group pages.
+        However, I realized these two are almost the same except for the price and a few other details, so I combined
+        them into one section.
 
         <div>
             <a href=#img-wireframe-class class="lightbox-link">
@@ -317,15 +313,16 @@
 
 
         <p>Hi-Fidelity Responsive Design</p>
-        I created hi-fidelity designs based on the wireframes. I decided to change the layout of the main page since it
+        Next I created hi-fidelity designs based on the wireframes. I decided to change the layout of the main page
+        since it
         looked text-heavy.
-        At first, I tried to leave all the text since I thought it's important for the users to know what matcha is, but
-        I realized people wouldn't care and just skip the reading part if they are not interested. At the end, I made
-        the text much shorter and gave the users the option to read more if they are interested.
+        At first, I tried to leave all the text since I thought it's important for users to know what matcha is, but
+        I realized people wouldn't care and just skip the reading part if they are not interested. I ended up making the
+        text much shorter and gave users the option to read more if they are interested.
         I also tried hard not to make the website look too sophisticated since Japanese Tea Ceremony itself is already
         sophisticated enough to sometimes scare people away. To achieve this, I used soft and friendly colors rather
         than
-        black, which a lot of matcha businesses do. Still, the images leave the hint of sophistication which shows the
+        black, which a lot of matcha businesses do. Still, the images leave a hint of sophistication which shows the
         beauty of Japanese Tea Ceremony.
 
 
@@ -386,8 +383,8 @@
 
         <p>Affinity Map</p>
         I synthesized the results and was able to determine what makes users frustrated or confused.
-        I mainly got feedback about the tea ceremony classes and booking process, so I re-iterated on it.
-        I searched for a lot of inspiration so that my design can deliver a better user experience.
+        I mainly got feedback about the tea ceremony classes and booking process, which I re-iterated on it.
+        I searched for inspiration on how to improve the design, in order to deliver a better user experience.
 
         <div>
             <a href=#img-affinity class="lightbox-link">
@@ -401,14 +398,15 @@
 
 
         <p>Priority Revision</p>
-        After analyzing what is making users frustrated or confused, I made revisions based on the
-        solutions/improvements on the affinity map.
+        After analyzing what makes users frustrated or confused, I made revisions based on the
+        solutions/improvements in the affinity map.
         <br>
 
 
         <div>
 
-            <div class="mirror-content">I made the 'shop' text more visible than the other text in the navigation bar.</div>
+            <div class="mirror-content">I made the 'shop' text more visible than the other text in the navigation bar.
+            </div>
 
             <div>
                 <a href=#img-revision-nav class="lightbox-link">
@@ -423,11 +421,9 @@
         </div>
 
         <div>
-            <div class="mirror-content">I removed the description text and included 'What is Japanese Tea Ceremony?'
-                text so that
-                whoever is interested can click and read more.
-                I added icons to differentiate group and private classes. The text is simple and short, yet it has all
-                the information about the classes that are different from each other.</div>
+            <div class="mirror-content">I removed the description text and included the link, "What is Japanese Tea Ceremony? so that
+                those interested can read more.
+                I added icons to differentiate group and private classes. The text is simple and short, yet it contains differences between the class type.</div>
 
             <div>
                 <a href=#img-revision-class class="lightbox-link">
@@ -518,7 +514,7 @@
 
     </div>
 
-    <footer> <small> Hand-crafted by Kotomi</small> </footer> 
+    <footer> <small> Hand-crafted by Kotomi</small> </footer>
 
 
 
