--- a/Brightwheel.html
+++ b/Brightwheel.html
@@ -8,7 +8,7 @@
 
 
     <title>Brightwheel case study</title>
-    <link rel="shortcut icon" type="img/jpg" href="img/favicon.svg"/>
+    <link rel="shortcut icon" type="img/jpg" href="img/favicon.svg" />
 </head>
 
 <body>
@@ -73,8 +73,7 @@
 
             <div>
                 <li>Design a messaging feature that enables parents to communicate with each other.</li>
-                <li>Discover what privacy concerns parents have and design the app accordingly so that it is safe to
-                    use.
+                <li>Learn what privacy concerns parents have and design the app respectfully.
                 </li>
             </div>
 
@@ -91,9 +90,10 @@
             </div>
 
             <p>Challenges</p>
-            <li>Not all parents are open to share their own or their child's information. How might we provide everyone
-                options to show/hide their information? </li>
-            <li>Parents have a hard time getting to know other parents in-person. It's also hard to know which children
+            <li>Not all parents are open to sharing their personal or their child's information. How might we provide
+                controls to protect their information? </li>
+            <li>Parents have a hard time getting to know other parents in-person. Furthermore, it's also hard to know
+                which children
                 belong to which parents.</li>
 
 
@@ -112,24 +112,22 @@
     </div>
 
     <div class="content mirror-body">
-        I decided to conduct only user interviews since I couldn’t check other competitors (I had to be a parent or
-        staff to be able to use similar apps). I was initially planning on conducting a survey, but I ended up not doing
-        it
-        since all the questions I had were better to ask in user interviews for qualitative data. Also, qualitative data
-        was more important to understand the users in this project.
+        Although I had initially planned on conducting a survey, I decided to just stick with user interviews in order
+        to get qualitative data, since this was most important to understand the users in this project. Unfortunately it
+        was not feasible to research competitors since I had to be a registered parent or staff member to use their
+        apps..
 
         <p>1:1 User Interviews</p>
         Through user interviews, I was able to learn the concerns and needs of the parents.
-        All of the participants were not very concerned about their privacy since their daycare is small. However, I can
-        see some parents being concerned about their privacy, and some participants showed concerns about privacy when
-        it comes to a larger schools.
-        For that reason, I decided give parents the option to hide their information in the app. Other than
-        that, the majority of participants seemed to want to get to know
+        All of the participants were not very concerned about their privacy since their daycare is small. However, some
+        participants showed concerns about privacy with regards to larger schools.
+        For this reason, I decided to include the option for parents to hide their information in the app.
+        Aside from privacy, the majority of participants wanted to get to know
         other children and parents.
 
         <br><br>
 
-        Here is the summary of the major needs/pain points I got from the user interviews.
+        Here are the major needs and pain points I collected from the user interviews.
 
         <div>
 
@@ -163,9 +161,10 @@
 
         <p>Persona</p>
         Through my research, I was able to learn a lot about the users, so I decided to summarize my findings into one
-        persona to remember throughout the process. It was really important for me to carefully read through the
-        interview summary since I don't have children. By creating a persona, I was able to remember who I was designing this feature for and what I need to focus on.
-
+        persona to remember throughout the process. It was critical for me to carefully read qnd understand the
+        interview summaries since I don't have any children. Therefore I decided to summarize my research findings into
+        one persona, in order to easily keep in mind who I was designing this feature for and what I should focus
+        on.
         <div>
 
             <a href=#img-persona class="lightbox-link">
@@ -181,7 +180,8 @@
 
         <p>User Flow</p>
         I decided to make a user flow to imagine how the user will think and take actions to complete a task.
-        Even though Brightwheel is an app I use every day, I only interact with the staff view, which is different from parents view.
+        Even though Brightwheel is an app I use every day, I only interact with the staff view, which is different from
+        parents view.
         To understand the users (the parents) better, I first did some secondary research to learn how the interface
         works.
         Then, I referred back to my research to make sure that I'm not missing important elements.
@@ -213,9 +213,9 @@
 
         <p>Sketches</p>
 
-        Before creating wireframes, I decided to sketch out different ideas and organize my thoughts.
-        I first went to the app and took a lot of screenshots of the design I will need to use in this project.
-        Then, I started putting all the new features together with the existing design in the sketches.
+        Before creating wireframes, I sketched out different ideas to organize my thoughts.
+        I first went to the app and took screenshots of the designs I would need to use in this project.
+        Then, I paired the new features together with the existing design in the sketches.
 
         <div>
 
@@ -232,11 +232,12 @@
 
 
         <p>Mid-Fidelity Wireframes</p>
-        I made wireframes before moving on to hi-fidelity design so that I can focus on the flows for the whole app.
-        I made this based on the sketches and screenshots from the Brightwheel app. The difficult part of this process
-        was the fact that there exist essentially two people in one app: the child
-        and parent. It took me some time to come up with a system to differentiate which settings a user is trying to
-        edit.
+        I made wireframes before moving on to hi-fidelity design so that I could focus on the flows for the whole app.
+        I based these on the sketches and screenshots from the Brightwheel app. The difficult part of this process
+        was the fact that there are essentially two profiles in one app: the child
+        and parent. It took me some time to come up with a system to differentiate between the two within user settings.
+        At the end, I came up with the idea of including a link to the privacy settings of the child's profile, so that
+        users can locate it at either one's profile setting page.
         I also focused on putting the privacy settings link somewhere easy to find since it's so important for users.
 
 
@@ -269,13 +270,13 @@
 
 
         <p>Hi-Fidelity Responsive Design</p>
-        Once I finished the wireframes, I started working on hi-fidelity designs.
+        Once I finished the wireframes, I moved on to hi-fidelity designs to finalize my designs into completion.
         While designing, I paid special attention to match the colors and paradigms in the original design.
         I made three flows for the parent messaging feature: sending a message request, editing privacy
-        settings, and checking a message request.
-        I didn't make major changes from the wireframes since I mainly followed the design of the original app. The
-        only design that is entirely new to the app is the checking a message request. I researched for inspiration for how I could make the message request obvious in a way that doesn't disrupt the original
-        design.
+        settings, and checking message requests.
+        I didn't make any major changes from the wireframes since I mainly followed the design of the app. The
+        only design that is entirely new to the app message request. I researched different message request designs for
+        inspiration, trying to make the notification obvious yet suitable to the original design.
         <br><br>
 
         <div>
@@ -339,17 +340,17 @@
         <a class="link"
             href="https://www.figma.com/proto/kC1vyScK9X1n2jBAD8PLZA/Brightwheel-Hi-fi-design?page-id=0%3A1&node-id=27%3A96&viewport=241%2C48%2C0.3&scaling=scale-down&starting-point-node-id=27%3A96&show-proto-sidebar=1"
             target="_blank">View Prototype</a><br><br>
-        I conducted usability tests to identify frustrations as well as privacy concerns that I should be more
-        careful about. I used two formats:
+        I conducted usability tests to identify frustrations as well as any additional privacy concerns. I used two
+        formats:
         <ul>
             <li>Zoom (3 participants who have a child currently attending daycare)</li>
             <li>Maze (10 participants, preferably parents)</li>
         </ul>
 
         <p>Affinity Map</p>
-        After the usability testing, I summarized the findings so that I can revise the parts of the design that
-        made the users frustrated/confused.
-        I did not get major privacy concerns regarding the app and its interface; rather I received comments
+        After the usability testing, I summarized the findings so that I could revise the parts of the design that
+        made the users frustrated or confused.
+        I did not hear any major privacy concerns regarding the app and its interface; rather I received comments
         concerning other features, such as locking the app.
         Since this is such a sensitive topic, I think there could be more things that could be iterated on and
         considered.
@@ -371,8 +372,9 @@
 
         <div>
             <div class="mirror-content">
-                I included the "what is a message request?" text so that if anyone gets confused by it, they can
-                read about it. Some participants mentioned that they can expect what it is, but they're still not sure
+                I included the text "What is a message request?". If a user is confused, they can click this to read
+                about how it works. Some participants mentioned that they can expect what it is, but they're still not
+                sure
                 what it does.
             </div>
             <div>
@@ -408,7 +410,7 @@
 
         <div>
             <div class="mirror-content">
-                Some participants had a hard time finding "display name" since it isn't shown until they
+                Some participants had a hard time finding the "display name" privacy settingsince it isn't shown until they
                 deactivate the "name" toggle.
                 I added some help text to inform users how to set a display name when they don't want to share their
                 real
@@ -439,7 +441,7 @@
                 I decided to change the color and remove the word “Topic” to make it
                 both look cleaner and more prominent;
                 I also made the drop down icon larger.<br><br>
-                A few participants mentioned that they didn't know who will receive the request, so I included some
+                A few participants mentioned that they didn't know who would receive the request, so I included some
                 explanatory
                 text.
             </div>
