Added images & magnifying glass cursor
– Added images to Windows to japan.html
– Removed  the hover effect on image and added the magnifying glass cursor

--- a/about.html
+++ b/about.html
@@ -78,7 +78,7 @@
             <div class="abouttext image-left content">
 
                 <img class="content-image about-image" src="img/kotomigraduation.jpg"
-                    alt="Kotomi wearing a Hakama, Japanese traditional clothes, for here graduation">
+                    alt="Kotomi wearing a Hakama, Japanese traditional clothes, for her graduation">
 
                 <div class="about-text">
 
