Windows to Japan contents
– Added images to windows to japan.html
– Worked on the contents of it

--- a/work.html
+++ b/work.html
@@ -59,7 +59,7 @@
                     <div class="title-shurui">STUDENT PROJECT</div>
                     <div class="case-study-title">Windows to Japan</div>
                     An end-end application that replaces your physical itinerary with a digital one.
-                    <div><a class="case-study-cta case-study-cta-button" href="Brightwheel.html">View case study</a>
+                    <div><a class="case-study-cta case-study-cta-button" href="Windows to Japan.html">View case study</a>
                     </div>
                 </div>
 
