Updates Windows to Japan.html
– Added all the images I need for the case study
– Updated the contents

--- a/Windows to Japan.html
+++ b/Windows to Japan.html
@@ -51,7 +51,7 @@
             </div>
 
 
-            <img class="matcha-hero-image" src="Brightwheel/Mock up.png" alt="Brightwheel app mock up three screens">
+            <img class="matcha-hero-image" src="wtj-img/Mockup.png" alt="Windows to Japan app mock up screen">
         </div>
 
 
@@ -63,8 +63,8 @@
     <div class="content">
         <p>What is Windows to Japan?</p>
         <div class="mirror-body">
-            Windows to Japan is a travel company that provides customized tours to inbound travellers to Japan, where I
-            used to work for.
+            Windows to Japan is a travel company that provides customized tours to inbound travellers to Japan (I used
+            to work there!).
             Their primary focus is planning tours and booking hotels and activities for each party, and they give
             physical travel files to their clients once they arrive in Japan. Windows to Japan also supports clients
             during their stay in Japan in the case of emergencies or just for general questions.
@@ -75,14 +75,14 @@
                 <div>
                     <li>Design an end-to-end travel application that replaces the physical travel files.
                     </li>
-                    <li>Organize all the information Windows to Japan provides to their clients and simplify them so
+                    <li>Organize all the information Windows to Japan provides to their clients and simplify it so
                         that their clients won’t miss important information.
                     </li>
                 </div>
 
                 <div class="objectives">
                     <div>
-                        <p>Client:</p> Windows to Japan (Volunteer work)
+                        <p>Client:</p> Windows to Japan (Volunteer)
                     </div>
                     <div>
                         <p>Roles:</p> UX/UI designer & researcher
@@ -93,8 +93,8 @@
                 </div>
 
                 <p>Challenges</p>
-                <li>Itineraries, in general, have overloaded with important information. How might we simplify the
-                    contents when there are a lot of information? </li>
+                <li>Itineraries are usually overloaded with important information. How might we simplify the
+                    contents when there is a lot of information? </li>
                 <li>Physical documents and digital apps bring users different experiences. How might we design the app
                     so that the app won't be too text-heavy like physical documents?</li>
 
@@ -117,9 +117,10 @@
     <div class="content mirror-body">
         <p>Competitive analysis</p>
         I was curious how other travel agencies are providing tour information with their clients since I have not heard
-        of using an app before. However, I couldn’t find any competitors doing this, so instead I picked three itinerary
-        apps to analyze. Some of the apps have similar features I envisioned, such as a chat bot that helps users and
-        using an in-app travel agent to plan trips to receive itineraries within the app.
+        of one using an app before. However, I couldn’t find any competitors doing this, so instead I picked three
+        itinerary
+        apps to analyze. Some of the apps have similar features to what I envisioned, such as a chat bot and
+        access to travel agents within the app.
 
         <div>
 
@@ -135,12 +136,14 @@
 
         <p>Survey</p>
         I conducted a survey to find out what frustrations and needs there are for travel apps in general.
-        I was also wondering if there's anyone who has used a travel agency who provides itineraries via an app.
-        For survey, I targeted people who have used a travel apps to plan their trips rather than who have used a travel
+        I was also wondering if there's anyone who has used a travel agency which provides itineraries via an app.
+        For the survey recruiting, I targeted people who have used travel apps to plan their trips rather than those who
+        have used a travel
         agency.
-        I wanted to find out and collect general feedback of travel apps so that I can understand what's users needs and
-        frustrations are in general.
-        I thought this was important to understand around digital products since I'm designing a digital product rather
+        I wanted to find out and collect general feedback about travel apps so that I can understand what the users'
+        needs and
+        frustrations are.
+        I thought it was more important to understand digital products since I'm designing a digital product rather
         than physical documents.
 
 
@@ -157,14 +160,16 @@
             <p>1:1 User Interviews</p>
             After the survey, I proceeded with user interviews to collect feedback of people who have used a travel
             agency to plan their trips.
-            For this process, I wanted to discover frustrations and needs of using physical or PDF itineraries.
-            From the interview, I learned that all of the participants prefer having detailed itineraries, yet they want
-            to skip when they need to. This was interesting because I received the same feedback from survey, which all
-            of the participants answered to have detailed itinerary with some bullet points.
+            For this process, I wanted to discover the frustrations and needs of using physical or PDF itineraries.
+            From the interviews, I learned that all of the participants prefer having detailed itineraries, but they
+            also want
+            to easily skip uninteresting parts. This was interesting because I received the same feedback from the
+            survey—
+            all the participants want a detailed itinerary but in a simple format.
 
             <br><br>
 
-            Here are the major needs and pain points I collected from the user interviews.
+            Here are the major needs and pain points I collected from the user interviews:
 
             <div>
 
@@ -197,13 +202,13 @@
 
 
         <p>Persona</p>
-        Through my research, I had a quite a lot of data collected. I synthesized the data to organize user feedback
+        Through my research, I collected a lot of data. I synthesized the data to organize user feedback
         and
-        created this persona to limit all the information to only important feedback. I tried to make this as
+        created this persona to filter down to just the important feedback. I tried to make this as
         descriptive as possible so that I can easily empathize with her and design the app based on her needs and
-        frustrations. From the overall research, I was able to identify the major need that all the participants
-        mentioned was to have detailed itinerary with simplified lists of information like bullet points. Therefore, it
-        was clear the main thing that I need to focus on.
+        frustrations. From the research, I identified that the top need is to have a detailed itinerary in a simple
+        format, such as bullet points.
+        Therefore, this is the main thing I focused on.
 
         <div>
 
@@ -221,9 +226,9 @@
         <p>User Flow</p>
         I decided to make a user flow because this app would be a little complicated to navigate. To make the app
         less
-        complicated, I thought I needed to better understand the users on how they would take actions and how they
+        complicated, I needed to better understand users in how they would take actions and how they
         process their thoughts.
-        The flow ended up getting complex, but I was able to modify the flow during the iteration process and
+        The flow ended up becoming complex, but I was able to modify the flow during the iteration process and
         understand
         what might be frustrating.
 
@@ -373,13 +378,25 @@
 
         <div>
 
-            <a href=#img-hifi-request class="lightbox-link">
-                <img class="mirror-content2" src="Brightwheel/Sending a request.jpg"
+            <a href=#img-hifi-main class="lightbox-link">
+                <img class="mirror-content2" src="wtj-img/Main highfi.jpg"
                     alt="mid-fidelity wireframes sending a request">
             </a>
 
-            <a href="#!" class="lightbox" id="img-hifi-request">
-                <span style="background-image: url('Brightwheel/Sending\ a\ request.jpg')"></span>
+            <a href="#!" class="lightbox" id="img-hifi-main">
+                <span style="background-image: url('wtj-img/Main\ highfi.jpg')"></span>
+            </a>
+
+        </div>
+        <div>
+
+            <a href=#img-hifi-others class="lightbox-link">
+                <img class="mirror-content2" src="wtj-img/Other pages.jpg"
+                    alt="mid-fidelity wireframes sending a request">
+            </a>
+
+            <a href="#!" class="lightbox" id="img-hifi-others">
+                <span style="background-image: url('wtj-img/Other\ pages.jpg')"></span>
             </a>
 
         </div>
@@ -397,15 +414,14 @@
     <div class="content mirror-body">
 
         <p>Prototype and Usability Test</p>
-        <a class="link"
-            href="https://www.figma.com/proto/kC1vyScK9X1n2jBAD8PLZA/Brightwheel-Hi-fi-design?page-id=0%3A1&node-id=27%3A96&viewport=241%2C48%2C0.3&scaling=scale-down&starting-point-node-id=27%3A96&show-proto-sidebar=1"
+        <a class="link" href="https://www.figma.com/file/lrMngfGejAwBsqBNVA532Q/WTJ-hi-fi-design?node-id=0%3A1"
             target="_blank">View Prototype</a><br><br>
         I decided to conduct another usability test to see if hi-fidelity wireframes solved the problems in the
         mid-fidelity wireframes. I also wanted to see if there's anything else that could be improved in the design
         and use of icons and colors.
         <ul>
             <li>Zoom (4 participants)</li>
-            <li>Maze (11 participants)</li>
+            <li>Maze (13 participants)</li>
         </ul>
 
         <p>Affinity Map</p>
@@ -415,12 +431,12 @@
         realize what I need to work on to make the design better.
 
         <div>
-            <a href=#img-affinity-map class="lightbox-link">
-                <img class="mirror-content2" src="Brightwheel/Affinity map.jpg" alt="Affinity map">
+            <a href=#img-hifi-affinity-map class="lightbox-link">
+                <img class="mirror-content2" src="wtj-img/WTJ Affinity Map - WTJ Usability test.jpg" alt="Affinity map">
             </a>
 
-            <a href="#!" class="lightbox" id="img-affinity-map">
-                <span style="background-image: url('Brightwheel/Affinity\ map.jpg')"></span>
+            <a href="#!" class="lightbox" id="img-hifi-affinity-map">
+                <span style="background-image: url('wtj-img/WTJ\ Affinity\ Map\ -\ WTJ\ Usability\ test.jpg')"></span>
             </a>
         </div>
 
@@ -430,26 +446,66 @@
         to make revisions since the edit button and swiping effect wasn't clear enough.
 
         As well as the frustrations, I received a lot of good feedback of the app providing very detailed yet simple
-        and
-        easy interface, which I
-        was trying to achieve.
+        and easy interface, which I was trying to achieve.
 
         <br>
 
         <div>
             <div class="mirror-content">
-                TEXT
+                I tested this in the mid-fidelity wireframes, and I learned that it wasn't intuitive to swipe this
+                without any explanations.
+                For that reason, I decided to include on-boarding screens in high-fidelity designs so that people can aware of the feature. In high-fidelity
+                usability test, I learned people still didn't realize they could swipe it even though some participants
+                read the whole on-boarding screens (in Zoom usability test). 
+                I didn't want the feature to be undiscovered, so I decided to include a pop-up screen on the itinerary page so that it gets users attentions. 
             </div>
             <div>
-                <a href=#img-revision-profile class="lightbox-link">
-                    <img class="mirror-content2" src="Brightwheel/Priority revision profile.jpg"
+                <a href=#img-revision-popup class="lightbox-link">
+                    <img class="mirror-content2" src="wtj-img/Pop-up.jpg"
                         alt="Revisions I made based on the user test, profile">
                 </a>
-                <a href="#!" class="lightbox" id="img-revision-profile">
-                    <span style="background-image: url('Brightwheel/Priority\ revision\ profile.jpg')"></span>
+                <a href="#!" class="lightbox" id="img-revision-popup">
+                    <span style="background-image: url('wtj-img/Pop-up.jpg')"></span>
                 </a>
             </div>
         </div>
+
+        <div>
+            <div class="mirror-content">
+                In the mid-fidelity usability test, I was aware of the edit icon being hard to find. I tried making it
+                more obvious in the high-fidelity designs, but I discovered that the participants still have a hard time
+                finding it. I received some
+                feedback saying it's better to have text saying "edit" or "modify", so I decided to have both the edit
+                icon and text. I also moved it to the white part and made it bigger so that it's more prominent from other
+                information.
+            </div>
+            <div>
+                <a href=#img-revision-edit class="lightbox-link">
+                    <img class="mirror-content2" src="wtj-img/Edit.jpg"
+                        alt="Revisions I made based on the user test, profile">
+                </a>
+                <a href="#!" class="lightbox" id="img-revision-edit">
+                    <span style="background-image: url('wtj-img/Edit.jpg')"></span>
+                </a>
+            </div>
+        </div>
+        <div>
+            <div class="mirror-content">
+                One of the participants pointed out that "Choose an alternative option in the area" wasn't clear so he couldn't find the alternative place.
+                After he said that, I realized that I didn't change the text size from 14px to 16px, so I changed it and also made it bolder for better readability.
+            </div>
+            <div>
+                <a href=#img-revision-text class="lightbox-link">
+                    <img class="mirror-content2" src="wtj-img/Text size.jpg"
+                        alt="Revisions I made based on the user test, profile">
+                </a>
+                <a href="#!" class="lightbox" id="img-revision-text">
+                    <span style="background-image: url('wtj-img/Text\ size.jpg')"></span>
+                </a>
+            </div>
+        </div>
+
+
 
 
 
@@ -472,9 +528,10 @@
             and I
             realized how important it is to have users involved in the middle of the process.
         </li>
-        <li>Don’t be afraid to use fonts that look big on your design tools—it won’t look big unless it’s too big.
+        <li>Don't assume users will understand a feature just by its icon. Feel free to add a description to tell users
+            how it works.</li>
+        <li>When designing on a large screen, be aware that readable text may not be readable on smaller phone screens.
         </li>
-        <li>TEXT </li>
     </div>
 
 
