Grammar fixes for Windows to Japan

--- a/Windows to Japan.html
+++ b/Windows to Japan.html
@@ -65,9 +65,9 @@
         <div class="mirror-body">
             Windows to Japan is a travel company that provides customized tours to inbound travellers to Japan (I used
             to work there!).
-            Their primary focus is planning tours and booking hotels and activities for each party, and they give
-            physical travel files to their clients once they arrive in Japan. Windows to Japan also supports clients
-            during their stay in Japan in the case of emergencies or just for general questions.
+            Their primary focus is planning tours and booking hotels and activities for their clients, and giving
+            them physical travel files once they arrive in Japan. Windows to Japan also supports clients
+            during their stay in the case of emergencies or just for general questions.
 
             <div class="mirror-body">
                 <p>Objective</p>
@@ -117,9 +117,9 @@
     <div class="content mirror-body">
         <p>Competitive analysis</p>
         I was curious how other travel agencies are providing tour information with their clients since I have not heard
-        of one using an app before. However, I couldn’t find any competitors doing this, so instead I picked three
+        of any using an app before. However, I couldn’t find any competitors doing this, so instead I picked three
         itinerary
-        apps to analyze. Some of the apps have similar features to what I envisioned, such as a chat bot and
+        apps to analyze. Some of them have similar features to what I envisioned, such as a chat bot and
         access to travel agents within the app.
 
         <div>
@@ -224,7 +224,7 @@
 
 
         <p>User Flow</p>
-        I decided to make a user flow because this app would be a little complicated to navigate. To make the app
+        I decided to make a user flow because this app will be a little complicated to navigate. To make the app
         less
         complicated, I needed to better understand users in how they would take actions and how they
         process their thoughts.
@@ -282,7 +282,7 @@
 
 
         <p>Mid-Fidelity Wireframes</p>
-        To make the sketches come alive, I started to work on low-fi wireframes based on the sketches, but it wasn’t
+        To make the sketches come alive, I started to work on mid-fidelity wireframes based on the sketches, but it wasn’t
         as
         intuitive as I thought it would be. After finishing the wireframes, I realized that it was somewhat
         confusing to
@@ -335,7 +335,7 @@
             href="https://www.figma.com/proto/KbbHPLf2m5jmZazjOuph9m/WTJ-wireframes?page-id=0%3A1&node-id=129%3A6223&viewport=241%2C48%2C0.1&scaling=scale-down&starting-point-node-id=129%3A6223"
             target="_blank">View Prototype</a><br>
         Since I wasn't sure the swiping effect was clear enough, I decided to conduct usability testing to receive
-        feedback from the users before designing high-fidelity designs.
+        feedback from the users before making hi-fidelity designs.
         I used two formats:
         <ul>
             <li>Zoom (2 participants)</li>
@@ -344,10 +344,10 @@
 
         <p>Affinity Map</p>
         I created this affinity map to summarize user feedback and what can be improved in the next step.
-        Through the usability testing I verified that the majority of people found the swiping effect unclear. I
-        also discovered that the edit icon is not very clear—several participants mentioned this. I was glad to test the
-        wireframes at this point since I would have not known the edit icon wasn't clear. Now, I know what parts of the
-        design I need to iterate on.
+        Through the usability testing I verified that the majority of people found the swiping effect unintuitive. Also,
+        several participants mentioned that the edit icon was hard to find. I was glad to test the
+        wireframes at this point since I would have not known the edit icon was hard to find. Now, I knew which parts of the
+        design to iterate on.
 
         <div>
             <a href=#img-affinity-map class="lightbox-link">
@@ -369,7 +369,7 @@
         in
         the previous process. Since travel itineraries on physical paper are usually overloaded with information, I
         aimed to make the design not text-heavy but still include all the important details. I focused on making the
-        interfaces (edit icons, CTA buttons) clean and understandable. While iterating on the hi-fidelity
+        interface (edit icons, CTA buttons) clean and understandable. While iterating on the hi-fidelity
         wireframes, I
         realized the font sizes were very small (12px), so I made them larger (16px). I thought it was large enough
         since it appeared large on my screen.
@@ -443,21 +443,21 @@
         <p>Priority Revision</p>
         After testing the app design, I was able to understand what was making users confused about the design. I
         wanted
-        to make revisions since the edit button and swiping effect wasn't clear enough.
+        to make revisions since both the edit button and swiping effect weren't clear enough.
 
-        As well as the frustrations, I received a lot of good feedback of the app providing very detailed yet simple
-        and easy interface, which I was trying to achieve.
+        Besides the frustrations, I received a lot of good feedback about the app providing a detailed yet simple
+        and easy interface, which I what I was trying to achieve.
 
         <br>
 
         <div>
             <div class="mirror-content">
-                I tested this in the mid-fidelity wireframes, and I learned that it wasn't intuitive to swipe this
+                I tested this in the mid-fidelity wireframes, and I learned that it wasn't intuitive to swipe an event
                 without any explanations.
-                For that reason, I decided to include on-boarding screens in high-fidelity designs so that people can aware of the feature. In high-fidelity
-                usability test, I learned people still didn't realize they could swipe it even though some participants
-                read the whole on-boarding screens (in Zoom usability test). 
-                I didn't want the feature to be undiscovered, so I decided to include a pop-up screen on the itinerary page so that it gets users attentions. 
+                For that reason, I decided to include on-boarding screens in the hi-fidelity designs to make people aware of the feature. In hi-fidelity
+                usability testing, I learned people still didn't realize they could swipe it even though some participants
+                read the whole on-boarding screens (in the Zoom usability test). 
+                I didn't want the feature to be undiscoverable, so I decided to include a pop-up screen on the itinerary page so that it gets users' attention. 
             </div>
             <div>
                 <a href=#img-revision-popup class="lightbox-link">
@@ -473,11 +473,10 @@
         <div>
             <div class="mirror-content">
                 In the mid-fidelity usability test, I was aware of the edit icon being hard to find. I tried making it
-                more obvious in the high-fidelity designs, but I discovered that the participants still have a hard time
+                more obvious in the hi-fidelity designs, but I discovered that the participants still have a hard time
                 finding it. I received some
                 feedback saying it's better to have text saying "edit" or "modify", so I decided to have both the edit
-                icon and text. I also moved it to the white part and made it bigger so that it's more prominent from other
-                information.
+                icon and text. I also moved it to the white part and made it bigger so that it's more prominent.
             </div>
             <div>
                 <a href=#img-revision-edit class="lightbox-link">
@@ -526,7 +525,7 @@
     <div class="content mirror-body">
         <li>Usability testing is very important. It was my first time conducting usability testing on wireframes,
             and I
-            realized how important it is to have users involved in the middle of the process.
+            realized how important it is to have users involved throughout the whole process.
         </li>
         <li>Don't assume users will understand a feature just by its icon. Feel free to add a description to tell users
             how it works.</li>
@@ -534,6 +533,11 @@
         </li>
     </div>
 
+    <div class="content-home socialmedia icons">
+        <a href="Brightwheel.html">View next case study</a>
+
+
+    </div>
 
 
 
